--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,9 @@
 }
 
 .App-logo {
+  animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -26,6 +21,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.container,
+.container-fluid {
+  margin-top: 20px;
 }
 
 @keyframes App-logo-spin {
