--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.carPopup {
+  font-size: 16px;
+  text-align: center;
+  background: rgba(149, 246, 251, 0.81);
+}
